[project]
name = "web-09-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Yevhenii Bessonov",email = "norent777@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.12.0,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
